third_party/move/move-compiler/tests/move_check/typing/ignore_inferred_resource.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/ignore_inferred_resource.move:4:9
  │
2 │     struct S<phantom T> {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
3 │     fun no() {
4 │         S{};
  │         ^^^
  │         │
  │         Cannot ignore values without the 'drop' ability. The value must be used
  │         The type '0x8675309::M::S<_>' does not have the ability 'drop'

error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/ignore_inferred_resource.move:4:9
  │
4 │         S{};
  │         ^^^ Cannot infer the type parameter `T` for generic struct `0x8675309::M::S`. Try providing a type parameter.

